Merge branch 'master' into pointer_events